add transition to header

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </head>
   <body>
     <header>
-      <section id="navbar">
+      <section id="nav">
         <nav
           class="navbar navbar-expand-lg navbar-dark shadow-5-strong fixed-top"
         >
