--- a/index.html
+++ b/index.html
@@ -288,6 +288,61 @@
           </div>
         </div>
       </section>
+      <section id="contact-form">
+        <div class="container">
+          <div class="row">
+            <h3></h3>
+            <p></p>
+            <form class="row g-3">
+              <div class="row g-3">
+                <div class="col-6">
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="First name"
+                    aria-label="First name"
+                  />
+                </div>
+                <div class="row g-3">
+                  <div class="col-6">
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Last name"
+                      aria-label="Last name"
+                    />
+                  </div>
+                </div>
+                <div class="row g-3">
+                  <div class="col-6">
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="inputEmail"
+                      placeholder="email"
+                      aria-label="email"
+                    />
+                  </div>
+                </div>
+                <div class="row g-3">
+                  <div class="col-6">
+                    <textarea
+                      type="text"
+                      class="form-control"
+                      id="inputMessage"
+                      placeholder="message"
+                      aria-label="message"
+                    ></textarea>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12">
+                <button type="submit" class="btn btn-success">Send</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="index.js"></script>
     <script
